# TaskBoard

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml  codeql.yml
backend/: CMakeLists.txt
backend/include/: http_responses.h
backend/src/: http_responses.cpp  main.cpp
backend/tests/: http_responses_tests.cpp
k8s/: deployment.yaml  service.yaml
